margin added to H2 to fix scroll issue?? + on mobile

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -33,6 +33,7 @@ h1 {
 h2{
 
 	font-size: 1.5rem;
+	margin-top: 4.5rem;
 
 	@include bp(m) {
 		font-size: 2rem;
