--- a/scss/main.scss
+++ b/scss/main.scss
@@ -191,7 +191,7 @@ header {
 			z-index: 1;
 			width: 30px;
 			height: 25px;
-			top: 24px;//20px;
+			top: 30px;//20px;
 			right: 30px;
 			transform: scale(.8);
 			cursor: pointer;
